Closed Bug 1725066 Opened 4 years ago Closed 4 years ago

undefined reference to `mozilla::Result<mozilla::Ok, JS::TranscodeResult> js::frontend::StencilXDR::codeSharedData<(js::XDRMode)0>(js::XDRState<(js::XDRMode)0>*, RefPtr<js::SharedImmutableScriptData>&)

Categories

(Core :: JavaScript Engine, defect)

defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox91 --- unaffected
firefox92 --- unaffected
firefox93 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[task 2021-08-10T22:34:21.749Z] 22:34:21     INFO -  ../../../js/src/build/libjs_static.a(Unified_cpp_js_src22.o): in function `mozilla::Result<mozilla::Ok, JS::TranscodeResult> js::XDRScript<(js::XDRMode)0>(js::XDRState<(js::XDRMode)0>*, JS::Handle<js::Scope*>, JS::Handle<js::ScriptSourceObject*>, JS::Handle<JSObject*>, JS::MutableHandle<JSScript*>)':
[task 2021-08-10T22:34:21.750Z] 22:34:21     INFO -  /builds/worker/checkouts/gecko/js/src/vm/JSScript.cpp:1156: undefined reference to `mozilla::Result<mozilla::Ok, JS::TranscodeResult> js::frontend::StencilXDR::codeSharedData<(js::XDRMode)0>(js::XDRState<(js::XDRMode)0>*, RefPtr<js::SharedImmutableScriptData>&)'
[task 2021-08-10T22:34:21.750Z] 22:34:21     INFO -  /builds/worker/fetches/binutils/bin/ld.bfd: libxul.so: hidden symbol `_ZN2js8frontend10StencilXDR14codeSharedDataILNS_7XDRModeE0EEEN7mozilla6ResultINS4_2OkEN2JS15TranscodeResultEEEPNS_8XDRStateIXT_EEER6RefPtrINS_25SharedImmutableScriptDataEE' isn't defined

For some reason, this only happens on s390x, but there's no reason this couldn't happen any platform.

They're necessary because of cross-compilation-unit use of the
template.

Set release status flags based on info from the regressing bug 1724803

Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/00e83f182733 Restore template instantiations that were removed in bug 1724803. r=tcampbell
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: