Bug 1725066 - Restore template instantiations that were removed in bug 1724803. r=tcampbell

They're necessary because of cross-compilation-unit use of the
template.

Differential Revision: https://phabricator.services.mozilla.com/D122305